# RayTracer

./: Cargo.toml
cfg_examples/: main.json  main2.json  main3.json  main4.json  main5.json
src/: lights.rs  main.rs  matrix.rs  object.rs  vec.rs
src/shapes/: cube.rs  difference.rs  intersection.rs  obj.rs  plane.rs  shape.rs  sphere.rs
